// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectInspector - state does not expand if the user selected some text 1`] = `
"
▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state does not expand if the user selected some text 2`] = `
"
▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state does not throw when expanding a block node 1`] = `
"
▶︎ ☲ Block
▶︎ Proxy: Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state does not throw when expanding a block node 2`] = `
"
[ ▼ ☲ Block ]
  |    a: 30
  |    b: 32
  ▶︎ Proxy: Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state expanding a getter returning a longString does not throw 1`] = `
"
▼ {…}
|  ▼ baseVal: \\"data:image/png;base64,initial<<<<\\"
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state expands if user selected some text and clicked the arrow 1`] = `
"
▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state expands if user selected some text and clicked the arrow 2`] = `
"
[ ▼ {…} ]
  |    a: 1
  |    Symbol(): \\"hello\\"
  |  ▶︎ <prototype>: Object { … }
  ▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state has the expected expandedPaths state when clicking nodes 1`] = `
"
▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state has the expected expandedPaths state when clicking nodes 2`] = `
"
[ ▼ {…} ]
  |    a: 1
  |    Symbol(): \\"hello\\"
  |  ▶︎ <prototype>: Object { … }
  ▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state has the expected expandedPaths state when clicking nodes 3`] = `
"
[ ▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … } ]
  ▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state has the expected expandedPaths state when clicking nodes 4`] = `
"
  ▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
[ ▼ Proxy ]
  |  ▶︎ <target>: Object { … }
  |  ▶︎ <handler>: Array(3) [ … ]
"
`;

exports[`ObjectInspector - state has the expected expandedPaths state when clicking nodes 5`] = `
"
[ ▼ {…} ]
  |    a: 1
  |    Symbol(): \\"hello\\"
  |  ▶︎ <prototype>: Object { … }
  ▼ Proxy
  |  ▶︎ <target>: Object { … }
  |  ▶︎ <handler>: Array(3) [ … ]
"
`;

exports[`ObjectInspector - state has the expected state when expanding a node 1`] = `
"
▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state has the expected state when expanding a node 2`] = `
"
[ ▼ {…} ]
  |  ▶︎ <prototype>: Object {  }
  ▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state has the expected state when expanding a node 3`] = `
"
  ▼ {…}
[ |  ▼ <prototype>: {} ]
  |  |  ▶︎ <prototype>: Object {  }
  ▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state has the expected state when expanding a proxy node 1`] = `
"
▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }
"
`;

exports[`ObjectInspector - state has the expected state when expanding a proxy node 2`] = `
"
  ▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
[ ▼ Proxy ]
  |  ▶︎ <target>: Object { … }
  |  ▶︎ <handler>: Array(3) [ … ]
"
`;

exports[`ObjectInspector - state has the expected state when expanding a proxy node 3`] = `
"
  ▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
  ▼ Proxy
  |  ▶︎ <target>: Object { … }
[ |  ▼ <handler>: (3) […] ]
  |  |    <prototype>: Object {  }
"
`;
